--- a/index.html
+++ b/index.html
@@ -241,7 +241,30 @@
         </div>
     </section>
 
-    
+    <section class="order">
+        <div class="container">
+            <img src="./image/order-car.png" alt="Order car">
+            <form>
+                <h3>Забронируйте автомобиль</h3>
+                <p>Заполните контактные данные, и мы перезвоним вам для обсуждения деталей и подтверждения бронирования</p>
+                <div class="order-form">
+                    <input type="text" placeholder="Автомобиль">
+                    <input type="text" placeholder="Ваше имя ">
+                    <input type="text" placeholder="Ваш телефон">
+                    <button class="button" type="button">Забронировать</button>
+                </div>
+            </form>
+        </div>
+    </section>
+
+     <footer class="footer">
+        <div class="container">
+            <div class="logo">
+                <img src="./image/logo.png" alt="logo">
+              </div>
+              <div class="rights">Все права зашищены</div>
+        </div>
+     </footer>
 
 </body>
 </html>
